example_deployment_k8s.yaml
---
#deployment for FusionAuth
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-env-testing-dep
  namespace: nginx-env-testing-dev
  labels:
    app: nginx-env-testing
    app.krtvelaz.com/env: dev
    app.krtvelaz.com/project: nginx-env-testing
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: nginx-env-testing-pod
  template:
    metadata:
      labels:
        app: nginx-env-testing
        pod: nginx-env-testing-pod
    spec:
      automountServiceAccountToken: false
      serviceAccountName: nginx-env-testing-iam-sa
      securityContext:
        runAsNonRoot: false
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              pod: nginx-env-testing-pod
      containers:
        - name: nginx-env-testing-container
          image: nginx-env-testing:latest
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - NET_RAW
                - ALL
              add: ["NET_BIND_SERVICE"]
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          startupProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 10
          resources:
            requests:
              memory: "250Mi"
              cpu: "700m"
            limits:
              memory: "750Mi"
              cpu: "1500m"
          ports:
            - containerPort: 8080
              name: hds-port
          volumeMounts:
            - name: nginx-env-testing-data
              mountPath: /usr/local/fusionauth/data
              subPath: data
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: nginx-env-testing-data
          persistentVolumeClaim:
            claimName: nginx-env-testing-pvc
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "nginx-env-testing-sp"
---
# Service for FusionAuth
apiVersion: v1
kind: Service
metadata:
  name: nginx-env-testing
  namespace: nginx-env-testing-dev
  labels:
    app: nginx-env-testing
    app.krtvelaz.com/env: dev
    app.krtvelaz.com/project: nginx-env-testing
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: hds-port
  selector:
    app:  nginx-env-testing
    pod:  nginx-env-testing-pod
---
# Ingress for FusionAuth
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-env-testing-gw
  namespace: nginx-env-testing-dev
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        -  nginx-env-testing-dev.apps.xxxxx.com
        -  xxxxxxint-dev.apps.xxxxx.com
---
# Ingress for FusionAuth
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-env-testing-vs
  namespace: nginx-env-testing-dev
spec:
  hosts:
    -  nginx-env-testing-dev.apps.xxxxx.com
    -  xxxxxxint-dev.apps.xxxxx.com
  gateways:
    -  nginx-env-testing-gw
  http:
    - match:
        - uri:
            prefix: "/nginx-env-testing"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: nginx-env-testing
            port:
              number: 80
